tests/ui/inference/need_type_info/calling-method-on-result-of-index-op-issue-125924.stderr
error[E0282]: type annotations needed for `Vec<_>`
  --> $DIR/calling-method-on-result-of-index-op-issue-125924.rs:8:9
   |
LL |     let x = vec![];
   |         ^
LL |     x[0usize].foo();
   |     --------- type must be known at this point
   |
help: consider giving `x` an explicit type, where the placeholders `_` are specified
   |
LL |     let x: Vec<_> = vec![];
   |          ++++++++

error[E0282]: type annotations needed
  --> $DIR/calling-method-on-result-of-index-op-issue-125924.rs:16:15
   |
LL |         thing[i].foo();
   |               ^ cannot infer type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
